--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,6 +19,18 @@
     {{- /* TODO add config and page config to config.js (static) */ -}}
     {{- /* Custom head */ -}}
     {{- block "custom-head" . }}{{ end -}}
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+	<script>
+	  if (window.netlifyIdentity) {
+		window.netlifyIdentity.on("init", user => {
+		  if (!user) {
+			window.netlifyIdentity.on("login", () => {
+			  document.location.href = "/admin/";
+			});
+		  }
+		});
+	  }
+	</script>
   </head>
   <body data-header-desktop="{{ .Site.Params.header.desktopMode }}" data-header-mobile="{{ .Site.Params.header.mobileMode }}">
     {{- /* Body wrapper */ -}}
